src/main/default/objects/aforza__Visit__c/aforza__Visit__c.object-meta.xml
<CustomObject>
    <description>A purposeful on-site meeting at an account.</description>
    <label>Visit</label>
    <nameField>
        <displayFormat>VIS-{00000000}</displayFormat>
        <label>Visit Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Visits</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>