src/main/default/objects/aforza__Visit__c/fields/AccountDepot__c.field-meta.xml
<CustomField>
    <fullName>AccountDepot__c</fullName>
    <formula>TEXT(aforza__Account__r.Depot__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Depot</label>
    <type>Text</type>
</CustomField>