src/main/default/objects/aforza__Visit__c/fields/AccountLastOrderDate__c.field-meta.xml
<CustomField>
    <fullName>AccountLastOrderDate__c</fullName>
    <formula>aforza__Account__r.LastOrderDate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Last Order Date</label>
    <type>Date</type>
</CustomField>