src/main/default/objects/aforza__Visit__c/fields/AccountNextDeliveryDate__c.field-meta.xml
<CustomField>
    <fullName>AccountNextDeliveryDate__c</fullName>
    <formula>aforza__Account__r.NextDeliveryDate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Next Delivery Date</label>
    <type>Date</type>
</CustomField>