src/main/default/objects/aforza__Visit__c/fields/AccountPrimaryGridNumber__c.field-meta.xml
<CustomField>
    <fullName>AccountPrimaryGridNumber__c</fullName>
    <formula>aforza__Account__r.PrimaryGridNumber__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Primary Grid Number</label>
    <type>Text</type>
</CustomField>