src/main/default/objects/aforza__Visit__c/fields/AccountSecondaryGridNumber__c.field-meta.xml
<CustomField>
    <fullName>AccountSecondaryGridNumber__c</fullName>
    <formula>aforza__Account__r.SecondaryGridNumber__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Secondary Grid Number</label>
    <type>Text</type>
</CustomField>