src/main/default/objects/aforza__Visit__c/fields/AccountShippingPostCode__c.field-meta.xml
<CustomField>
    <fullName>AccountShippingPostCode__c</fullName>
    <formula>aforza__Account__r.ShippingPostalCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Shipping Post Code</label>
    <type>Text</type>
</CustomField>