src/main/default/objects/aforza__Visit__c/fields/aforza__Account__c.field-meta.xml
<CustomField>
    <fullName>aforza__Account__c</fullName>
    <description>The account the visit is taking place at.</description>
    <inlineHelpText>The account the visit is taking place at.</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Visits</relationshipLabel>
    <relationshipName>Visits</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>