src/main/default/objects/aforza__Visit__c/fields/aforza__Status__c.field-meta.xml
<CustomField>
    <fullName>aforza__Status__c</fullName>
    <description>The current status of the visit.</description>
    <inlineHelpText>The current status of the visit.</inlineHelpText>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Started</fullName>
                <default>true</default>
                <label>Not Started</label>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Successful</fullName>
            </value>
            <value>
                <fullName>Ring Back</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>