src/main/default/objects/aforza__Visit__c/fields/aforza__Type__c.field-meta.xml
<CustomField>
    <fullName>aforza__Type__c</fullName>
    <description>The type of visit.</description>
    <inlineHelpText>The type of visit.</inlineHelpText>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Outlet Visit</fullName>
            </value>
            <value>
                <fullName>Conference</fullName>
            </value>
            <value>
                <fullName>Customer Meeting</fullName>
            </value>
            <value>
                <fullName>Phone Call</fullName>
            </value>
            <value>
                <fullName>Video Call</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>