src/main/default/objects/aforza__Visit__c/fields/CallNote__c.field-meta.xml
<CustomField>
    <fullName>CallNote__c</fullName>
    <label>Call Note</label>
    <length>255</length>
    <type>Text</type>
</CustomField>