src/main/default/objects/aforza__Visit__c/fields/DistancefromVisittoAccount__c.field-meta.xml
<CustomField>
    <fullName>DistancefromVisittoAccount__c</fullName>
    <description>Distance, in meters, from Visit Check-in Location to Account Location</description>
    <formula>DISTANCE( aforza__Check_In_Location__c, aforza__Account__r.aforza__Location__c, &apos;km&apos;) * 1000</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Distance from Visit to Account</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>