src/main/default/objects/aforza__Visit__c/fields/IsCurrentOwnerCurrentUser__c.field-meta.xml
<CustomField>
    <fullName>IsCurrentOwnerCurrentUser__c</fullName>
    <description>Formula field to check if the owner in custom owner field is current user for list view</description>
    <formula>aforza__Owner__c ==  $User.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Current Owner Current User</label>
    <type>Checkbox</type>
</CustomField>