src/main/default/objects/aforza__Visit__c/fields/OnHoldIndicator__c.field-meta.xml
<CustomField>
    <fullName>OnHoldIndicator__c</fullName>
    <formula>IF(ISPICKVAL(aforza__Account__r.CreditStatus__c, &apos;On Hold&apos;), True, False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>On Hold Indicator</label>
    <type>Checkbox</type>
</CustomField>