src/main/default/objects/aforza__Visit__c/recordTypes/aforza__Direct_Visit.recordType-meta.xml
<RecordType>
    <fullName>aforza__Direct_Visit</fullName>
    <active>true</active>
    <description>A visit to be executed in person.</description>
    <label>Direct Visit</label>
</RecordType>