src/main/default/objects/aforza__Visit__c/recordTypes/aforza__Remote_Visit.recordType-meta.xml
<RecordType>
    <fullName>aforza__Remote_Visit</fullName>
    <active>true</active>
    <description>A visit to be executed remotely.</description>
    <label>Remote Visit</label>
</RecordType>