src/main/default/objects/aforza__Visit__c/recordTypes/aforza__Template_Visit.recordType-meta.xml
<RecordType>
    <fullName>aforza__Template_Visit</fullName>
    <active>true</active>
    <description>A visit template for quickly creating new visits.</description>
    <label>Template Visit</label>
</RecordType>