src/main/default/objects/aforza__Visit__c/listViews/MyCalls.listView-meta.xml
<ListView>
    <fullName>MyCalls</fullName>
    <columns>aforza__Account__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>aforza__Type__c</columns>
    <columns>aforza__Planned_Time__c</columns>
    <columns>aforza__Owner__c</columns>
    <columns>aforza__Description__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>IsCurrentOwnerCurrentUser__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>My Calls</label>
</ListView>