src/main/default/objects/aforza__Visit__c/listViews/MyRingBacks.listView-meta.xml
<ListView>
    <fullName>MyRingBacks</fullName>
    <columns>NAME</columns>
    <columns>aforza__Account__c</columns>
    <columns>aforza__Priority__c</columns>
    <columns>aforza__Planned_Time__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>aforza__Status__c</field>
        <operation>equals</operation>
        <value>Ring Back</value>
    </filters>
    <label>My Ring Backs</label>
</ListView>